--- a/app/src/main/res/layout/apps_layout_item_apps.xml
+++ b/app/src/main/res/layout/apps_layout_item_apps.xml
@@ -1,77 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardviewApp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:elevation="8dp"
-    android:longClickable="true"
-    android:foreground="?attr/selectableItemBackground"
-    app:cardBackgroundColor="#fff"
-    app:cardCornerRadius="8dp">
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:theme="@style/Theme.MaterialComponents.Light"
+        android:id="@+id/cardviewApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:longClickable="true"
+        android:checkable="true"
+        android:clickable="true"
+        app:strokeColor="@color/black_overlay"
+        android:focusable="true"
+        app:cardCornerRadius="8dp">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
             <ImageView
-                android:id="@+id/imgIcon"
-                android:layout_width="68dp"
-                android:layout_height="50dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp"
-                app:srcCompat="@mipmap/ic_launcher" />
+                    android:id="@+id/imgIcon"
+                    android:layout_width="68dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="4dp"
+                    app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
-                android:id="@+id/txtAppName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imgIcon"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="14sp" />
+                    android:id="@+id/txtAppName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/imgIcon"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/appsSize"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txtAppName"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginBottom="4dp"
-                android:text="AppSize"
-                android:textAlignment="center"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="12sp" />
+                    android:id="@+id/appsSize"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txtAppName"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="4dp"
+                    android:text="AppSize"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="12sp" />
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/imageViewCheckedApp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#33000000"
-            android:padding="25dp"
-            android:src="@drawable/checked"
-            android:visibility="visible" />
+<!--        <ImageView-->
+<!--                android:id="@+id/imageViewCheckedApp"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="#33000000"-->
+<!--                android:padding="25dp"-->
+<!--                android:src="@drawable/checked"-->
+<!--                android:visibility="visible" />-->
     </FrameLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
