--- a/app/src/main/res/layout/files_layout_file_properties.xml
+++ b/app/src/main/res/layout/files_layout_file_properties.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/filePropertiesRoot"
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/filePropertiesRoot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
